--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,14 +110,109 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import time\n",
+        "import random\n",
+        "\n",
+        "# Function to scrape book data from the website\n",
+        "def scrape_books(min_rating=4.0, max_price=20.0):\n",
+        "    base_url = 'https://books.toscrape.com/catalogue/page-{}.html'\n",
+        "    \n",
+        "    books = []  # List to hold all the scraped books data\n",
+        "    \n",
+        "    # Iterate through pages (let's assume we can scrape up to page 50)\n",
+        "    for page_num in range(1, 51):\n",
+        "        url = base_url.format(page_num)\n",
+        "        response = requests.get(url)\n",
+        "        \n",
+        "        if response.status_code != 200:\n",
+        "            break  # Exit if the page is not found or there is an error\n",
+        "        \n",
+        "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "        \n",
+        "        # Find all the book containers on the page\n",
+        "        book_containers = soup.find_all('article', class_='product_pod')\n",
+        "        \n",
+        "        for book in book_containers:\n",
+        "            # Extract the title of the book\n",
+        "            title = book.find('h3').find('a')['title']\n",
+        "            \n",
+        "            # Extract the price of the book\n",
+        "            price_str = book.find('p', class_='price_color').text.strip()\n",
+        "            \n",
+        "            # Remove the £ symbol and try to convert the price to a float\n",
+        "            try:\n",
+        "                price = float(price_str[1:])  # Strip the £ sign and convert to float\n",
+        "            except ValueError:\n",
+        "                continue  # If conversion fails, skip this book\n",
+        "            \n",
+        "            # Skip books that exceed the maximum price\n",
+        "            if price > max_price:\n",
+        "                continue\n",
+        "            \n",
+        "            # Extract the rating (convert from class name to numerical value)\n",
+        "            rating_class = book.find('p', class_='star-rating')['class'][1]\n",
+        "            rating_dict = {'One': 1, 'Two': 2, 'Three': 3, 'Four': 4, 'Five': 5}\n",
+        "            rating = rating_dict.get(rating_class, 0)\n",
+        "            \n",
+        "            # Extract the genre (the genre is present in the URL of each book's detail page)\n",
+        "            book_url = book.find('h3').find('a')['href']\n",
+        "            book_detail_url = 'https://books.toscrape.com/catalogue/' + book_url.split('/')[2]\n",
+        "            book_response = requests.get(book_detail_url)\n",
+        "            book_soup = BeautifulSoup(book_response.text, 'html.parser')\n",
+        "            genre = book_soup.find('ul', class_='breadcrumb').find_all('li')[2].text.strip()\n",
+        "            \n",
+        "            # Extract the availability of the book (in stock or not)\n",
+        "            availability = book.find('p', class_='instock availability').text.strip()\n",
+        "            \n",
+        "            # Extract the description (if available)\n",
+        "            try:\n",
+        "                description = book_soup.find('meta', attrs={'name': 'description'})['content']\n",
+        "            except TypeError:\n",
+        "                description = 'No description available.'\n",
+        "            \n",
+        "            # Append the book data to the list\n",
+        "            if rating >= min_rating and price <= max_price:\n",
+        "                books.append({\n",
+        "                    'UPC': book.find('td').text.strip(),\n",
+        "                    'Title': title,\n",
+        "                    'Price (£)': price,\n",
+        "                    'Rating': rating,\n",
+        "                    'Genre': genre,\n",
+        "                    'Availability': availability,\n",
+        "                    'Description': description\n",
+        "                })\n",
+        "        \n",
+        "        # Sleep for a random amount of time (e.g., between 1 and 3 seconds) between requests\n",
+        "        time.sleep(random.uniform(1, 3))\n",
+        "    \n",
+        "    # Convert the list of books data into a pandas DataFrame\n",
+        "    df = pd.DataFrame(books)\n",
+        "    return df\n",
+        "\n",
+        "# Example usage of the function\n",
+        "df_books = scrape_books(min_rating=4.0, max_price=20.0)\n",
+        "print(df_books.head())\n",
+        "\n"
       ]
     }
   ],
@@ -126,7 +221,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -140,7 +235,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
